--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap");
 
 :root {
   --Very_dark_cyan-color: hsl(183, 100%, 15%);
@@ -20,7 +20,7 @@
 }
 
 body {
-  font-family: 'Space Mono', monospace;
+  font-family: "Space Mono", monospace;
   background-color: #c5e4e7;
   display: flex;
   flex-direction: column;
@@ -221,7 +221,7 @@ input:focus {
 
   .image {
     transform: translateY(-100px);
-    scale: 1.2;
+    /* scale: 1.2; */
   }
 
   .container {
@@ -231,7 +231,7 @@ input:focus {
     box-shadow: 0px 15px 25px rgba(79, 166, 175, 0.2);
     flex-direction: row;
     justify-content: space-between;
-    transform: scale(1.1);
+    /* transform: scale(1.1); */
   }
 
   .inputs,
