--- a/style.css
+++ b/style.css
@@ -220,8 +220,7 @@ input:focus {
   }
 
   .image {
-    transform: translateY(-100px);
-    /* scale: 1.2; */
+    /* transform: translateY(-100px); */
   }
 
   .container {
@@ -231,7 +230,6 @@ input:focus {
     box-shadow: 0px 15px 25px rgba(79, 166, 175, 0.2);
     flex-direction: row;
     justify-content: space-between;
-    /* transform: scale(1.1); */
   }
 
   .inputs,
